# tivdok

./: .env.example  .gitignore  README.md  pyproject.toml  yad2_scraper.py
car_seller/: api.py  display.py  habasta.py  license_parser.py  lobby.py  main.py  models.py  my_car_wizard.py  official_price.py  plate_lookup.py  scraper.py  selling_plan.py  server.py  vehicle_history.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: CarViewer3D.jsx
frontend/src/pages/: AnalyzePage.jsx  GarageView.jsx  PlateScan.jsx
frontend/src/steps/: StepAgentBuilder.jsx  StepApprove.jsx  StepAutopilot.jsx  StepCarDetails.jsx  StepHabasta.jsx  StepHistory.jsx  StepIdentify.jsx  StepLanding.jsx  StepLobby.jsx  StepMarket.jsx  StepMarketPrompt.jsx  StepPrice.jsx
tests/: conftest.py  test_api.py  test_chat_context.py  test_compute_analysis.py  test_habasta.py  test_license_parser.py  test_models.py  test_official_price.py  test_plate_lookup.py  test_scraper.py  test_scraper_resolve.py  test_selling_plan.py  test_selling_plan_extra.py  test_vehicle_history.py  test_vehicle_history_extra.py
