[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "car-seller-assistant"
version = "0.1.0"
description = "Car selling assistant: scrape Yad2, get official prices, and build a selling plan"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    "pydantic>=2.7.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pillow>=10.3.0",
    "pdfplumber>=0.11.0",
]

[project.scripts]
car-seller-web = "car_seller.server:main"

[tool.hatch.build.targets.wheel]
packages = ["car_seller"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=car_seller",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]

[tool.coverage.run]
source = ["car_seller"]
omit = [
    "car_seller/server.py",
    "car_seller/__init__.py",
]

[tool.coverage.report]
fail_under = 80
